@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.2 2004/03/07 23:59:01 xtraeme Exp $
+$NetBSD: distinfo,v 1.3 2004/10/20 22:17:31 xtraeme Exp $
 
-SHA1 (wistumbler2.00-pre7.tar.gz) = d12d2af1bbc9659ea3547b4618ef82c4e008694c
-Size (wistumbler2.00-pre7.tar.gz) = 23324 bytes
+SHA1 (wistumbler2.00-pre9.tar.gz) = c33709bdc9ff7c7ec6bb23132f2594ec4a143a71
+Size (wistumbler2.00-pre9.tar.gz) = 40641 bytes
